[gd_scene load_steps=25 format=3 uid="uid://dnv75umk2xdw5"]

[ext_resource type="Script" path="res://sources/game/entities/player/scp_player_character.gd" id="1_si32e"]
[ext_resource type="Script" path="res://sources/game/entities/controllers/scp_player_controller_sync.gd" id="2_v1bf7"]
[ext_resource type="PackedScene" uid="uid://ciitgmfp3gs82" path="res://prefabs/game/entities/debugs/pref_debug_entity.tscn" id="3_d4qey"]
[ext_resource type="Script" path="res://sources/game/entities/player/scp_camera.gd" id="4_igsgl"]
[ext_resource type="Shader" path="res://shaders/game/entities/spawns/sh_player_spawn,gdshader.gdshader" id="5_se3xg"]
[ext_resource type="Texture2D" uid="uid://t0s7yn2ptpvn" path="res://assets/textures/player/movement/tx_base_rifle_man.png" id="5_um0ej"]
[ext_resource type="Texture2D" uid="uid://d1qpyrenjp5fy" path="res://assets/textures/icons/marks/tx_point_mark_01.png" id="6_884l0"]
[ext_resource type="Texture2D" uid="uid://bqjyyc1vf64om" path="res://assets/textures/flares/tx_flare_01.png" id="7_dahry"]
[ext_resource type="Texture2D" uid="uid://2qoplugxrqxp" path="res://assets/textures/flares/tx_flare_02.png" id="8_77wdl"]
[ext_resource type="Texture2D" uid="uid://b3wkqdf84ua3t" path="res://assets/textures/flares/tx_flare_03.png" id="9_3mjte"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yu8d"]
size = Vector2(8, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v572p"]
resource_local_to_scene = true
shader = ExtResource("5_se3xg")
shader_parameter/progress = 1.0
shader_parameter/noise_desnity = 30.0
shader_parameter/beam_size = 0.03
shader_parameter/color = Vector4(20, 0, 20, 100)

[sub_resource type="Animation" id="Animation_jdrp8"]
length = 0.001

[sub_resource type="Animation" id="Animation_g40y1"]
resource_name = "anim_flare_00"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flare_01:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flare_01:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flare_02:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flare_03:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ap7nk"]
resource_name = "anim_flare_01"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flare_02:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flare_02:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flare_01:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flare_03:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qajci"]
resource_name = "anim_flare_02"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flare_03:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flare_03:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flare_02:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flare_01:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_22pvw"]
_data = {
"RESET": SubResource("Animation_jdrp8"),
"anim_flare_00": SubResource("Animation_g40y1"),
"anim_flare_01": SubResource("Animation_ap7nk"),
"anim_flare_02": SubResource("Animation_qajci")
}

[sub_resource type="Animation" id="Animation_dapor"]
length = 0.001

[sub_resource type="Animation" id="Animation_x0s2x"]
resource_name = "anim_player_death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../GUI/PlayerName:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.784314), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_after_death"
}]
}

[sub_resource type="Animation" id="Animation_wubxv"]
resource_name = "anim_player_spawn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../GUI/PlayerName:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0.784314)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_enable_movement_sync"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hr0wj"]
_data = {
"RESET": SubResource("Animation_dapor"),
"anim_player_death": SubResource("Animation_x0s2x"),
"anim_player_spawn": SubResource("Animation_wubxv")
}

[sub_resource type="Animation" id="Animation_n76ca"]
length = 0.001

[sub_resource type="Animation" id="Animation_isb4e"]
resource_name = "anim_player_hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyEffects:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(0.811765, 0.482353, 1, 0), Color(0.811765, 0.482353, 1, 0.862745), Color(0.811765, 0.482353, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hafia"]
_data = {
"RESET": SubResource("Animation_n76ca"),
"anim_player_hit": SubResource("Animation_isb4e")
}

[node name="PlayerCharacter" type="CharacterBody2D" groups=["Player"]]
motion_mode = 1
wall_min_slide_angle = 0.0
platform_on_leave = 2
platform_floor_layers = 4278190095
script = ExtResource("1_si32e")
path_player_name = NodePath("GUI/PlayerName")

[node name="PlayerControllerSync" type="Node2D" parent="."]
script = ExtResource("2_v1bf7")

[node name="FireReloading" type="Timer" parent="PlayerControllerSync"]
wait_time = 0.1

[node name="SyncPlayerStatus" type="Timer" parent="PlayerControllerSync"]
wait_time = 0.5

[node name="DebugEntity" parent="." instance=ExtResource("3_d4qey")]

[node name="BoxCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1yu8d")

[node name="Camera" type="Camera2D" parent="."]
enabled = false
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("4_igsgl")

[node name="PaticleFX" type="CPUParticles2D" parent="Camera"]
position = Vector2(-373, 1)
amount = 30
lifetime = 10.0
preprocess = 30.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(30, 400)
spread = 180.0
gravity = Vector2(200, 20)
angular_velocity_min = 60.0
angular_velocity_max = 60.0
scale_amount_min = 0.6
scale_amount_max = 0.8
color = Color(0.737255, 0.501961, 0.933333, 1)

[node name="GUI" type="Node2D" parent="."]

[node name="PlayerName" type="Label" parent="GUI"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(60, 12)
offset_left = -30.0
offset_top = -26.0
offset_right = 30.0
offset_bottom = -14.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.584314, 0.521569, 0.988235, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 6
text = "Pyliot
"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Body" type="Node2D" parent="."]

[node name="BodySheet" type="Sprite2D" parent="Body"]
self_modulate = Color(0.862745, 0.592157, 0.737255, 1)
material = SubResource("ShaderMaterial_v572p")
scale = Vector2(1.2, 1.2)
texture = ExtResource("5_um0ej")

[node name="BodyEffects" type="Sprite2D" parent="Body/BodySheet"]
modulate = Color(0.811765, 0.482353, 1, 0)
texture = ExtResource("5_um0ej")

[node name="Aim" type="RayCast2D" parent="Body/BodySheet"]
visible = false
position = Vector2(0, 2.5)

[node name="Point" type="Sprite2D" parent="Body/BodySheet/Aim"]
modulate = Color(1, 0.745098, 0.286275, 0.784314)
z_index = 10
rotation = 1.0472
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_884l0")

[node name="Pivot" type="RayCast2D" parent="Body/BodySheet/Aim"]
target_position = Vector2(0, 25)

[node name="Location" type="Marker2D" parent="Body/BodySheet/Aim/Pivot"]

[node name="Flare_01" type="Sprite2D" parent="Body/BodySheet"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(13.5, 2.5)
scale = Vector2(0.708333, 1)
texture = ExtResource("7_dahry")

[node name="Flare_02" type="Sprite2D" parent="Body/BodySheet"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(13.5, 2.5)
scale = Vector2(0.708333, 1)
texture = ExtResource("8_77wdl")

[node name="Flare_03" type="Sprite2D" parent="Body/BodySheet"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(13.5, 2.5)
scale = Vector2(0.708333, 1)
texture = ExtResource("9_3mjte")

[node name="AnimFlares" type="AnimationPlayer" parent="Body/BodySheet"]
reset_on_save = false
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_22pvw")
}

[node name="AnimationStates" type="AnimationPlayer" parent="Body/BodySheet"]
reset_on_save = false
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_hr0wj")
}

[node name="AnimationFx" type="AnimationPlayer" parent="Body/BodySheet"]
reset_on_save = false
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_hafia")
}

[connection signal="timeout" from="PlayerControllerSync/FireReloading" to="." method="_on_fire_reloading_timeout"]
[connection signal="timeout" from="PlayerControllerSync/SyncPlayerStatus" to="." method="_on_sync_player_status_timeout"]
